# bluespec-calculator

./: .clang-format  .gitignore  .pre-commit-config.yaml  Bluespec_Exercise.md  CMakeLists.txt  flake.nix
src/: CMakeLists.txt  Calculator.bsv  Stack.bsv
tests/: CMakeLists.txt  TestCalculator.bsv  golden_calculator.cc  input.txt  test_input.txt
tests/BSV_test/: CMakeLists.txt  TestCalculator.bsv
tests/SystemC_test/: CMakeLists.txt  CalculatorTop.bsv  sc_main.cpp
